@@ -1,3 +1,9 @@
+2004-09-06  Christian Stimming  <stimming@tuhh.de>
+
+	* src/import-export/hbci/dialog-hbcitrans.c,
+	gnc-hbci-getbalance.c, gnc-hbci-gettrans.c: More AqBanking work
+	after hints from Martin Preuss <martin@libchipcard.de>.
+
 2004-09-04  Christian Stimming  <stimming@tuhh.de>
 
 	* src/import-export/hbci/*.h, *.c, macros/aqbanking.m4,
